Translate option extended.

--- a/app/views/expense/add_expense.html
+++ b/app/views/expense/add_expense.html
@@ -1,40 +1,40 @@
 <div class="container sign-up-container">
-  <h2 style="text-align:center;"><img src="images/add_expense.png"> ADD EXPENSE</h2>
+  <h2 style="text-align:center;"><img src="images/add_expense.png"> {{isEng() ? 'ADD EXPENSE':'ADAUGA INCASARE'}}</h2>
   <form class="form-horizontal" role="form" ng-submit="submit()">
     <div class="form-group">
-      <label class="control-label col-sm-2" for="name">Name:</label>
+      <label class="control-label col-sm-2" for="name">{{isEng() ? 'Name':'Nume'}}:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="name" placeholder="Expense name" ng-model="expense.name" required >
+        <input type="text" class="form-control" id="name" placeholder="{{isEng() ? 'Expense name':'Numele cheltuielii'}}" ng-model="expense.name" required >
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="date">Category:</label>
+      <label class="control-label col-sm-2" for="date">{{isEng() ? 'Category':'Categorie'}}:</label>
       <div class="col-sm-5">
-        <select type="date" class="form-control" id="category" placeholder="Category" ng-model="expense.category.name" required>
+        <select type="date" class="form-control" id="category" placeholder="{{isEng() ? 'Category':'Categorie'}}" ng-model="expense.category.name" required>
           <option ng-repeat="category in categories" value="{{category}}" required>{{category}}</option>
         </select>
       </div>
       <div class="col-sm-3">
-        <input type="text" class="form-control" placeholder="New category" ng-model="newCategory">
+        <input type="text" class="form-control" placeholder="{{isEng() ? 'New category':'Categorie noua'}}" ng-model="newCategory">
       </div>
       <div class="col-sm-2">
-        <input type="button" class="form-control" placeholder="Add new category" value="Add" ng-click="addCategory()">
+        <input type="button" class="form-control" placeholder="{{isEng() ? 'Add new category':'adauga categorie noua'}}" value="{{isEng() ? 'Add':'Adauga'}}" ng-click="addCategory()">
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="description">Description:</label>
+      <label class="control-label col-sm-2" for="description">{{isEng() ? 'Description':'Descriere'}}:</label>
       <div class="col-sm-10">
-        <textarea type="text" rows="5"  class="form-control" id="description" placeholder="Description ..." ng-model="expense.description"/>
+        <textarea type="text" rows="5"  class="form-control" id="description" placeholder="{{isEng() ? 'Description ...':'Descriere ...'}}" ng-model="expense.description"/>
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="amount">Amount:</label>
+      <label class="control-label col-sm-2" for="amount">{{isEng() ? 'Amount':'Suma'}}:</label>
       <div class="col-sm-10">
-        <input type="number" step="any" class="form-control" id="amount" placeholder="Expense amount" ng-model="expense.amount" required >
+        <input type="number" step="any" class="form-control" id="amount" placeholder="{{isEng() ? 'Expense amount':'Suma cheltuielii'}}" ng-model="expense.amount" required >
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="date">Creation date:</label>
+      <label class="control-label col-sm-2" for="date">{{isEng() ? 'Creation date':'Data crearii'}}:</label>
       <div class="col-sm-10">
         <input type="datetime-local" value="{{current_date_value}}" class="form-control" id="date" placeholder="date"
                ng-model="expense.creationDate" required >
@@ -42,7 +42,7 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default submit-btn">Add expense</button>
+        <button type="submit" class="btn btn-default submit-btn">{{isEng() ? 'Add expense':'Adauga cheltuiala'}}</button>
       </div>
     </div>
   </form>
