--- a/app/views/user/logout.html
+++ b/app/views/user/logout.html
@@ -1,3 +1,4 @@
 <div class="container sign-up-container">
-  <h1>LOGGING OUT THE USER ......</h1>
+  <h1 ng-if="isEng()">LOGGING OUT THE USER ......</h1>
+  <h1 ng-if="!isEng()">Utilizatorul va fi delogat ......</h1>
 </div>
