--- a/app/views/expense/expenses_chart.html
+++ b/app/views/expense/expenses_chart.html
@@ -1,8 +1,8 @@
 <div class="container sign-up-container">
-  <h2 style="text-align:center;"><img src="images/expenses_chart.svg"> EXPENSES CHART</h2>
+  <h2 style="text-align:center;"><img src="images/expenses_chart.svg"> {{isEng() ? 'EXPENSES CHART':'GRAFIC CHELTUIELI'}}</h2>
   <br>
   <div class="form-group">
-    <label class="control-label col-sm-3">Graphic type:</label>
+    <label class="control-label col-sm-3">{{isEng() ? 'Graphic type':'Tipul graficului'}}:</label>
     <div class="col-sm-8">
       <select type="date" class="form-control" id="graphic" placeholder="Category" ng-model="graphic_type" required>
         <option ng-repeat="graphic in graphics" value="{{graphic}}" required>{{graphic}}</option>
@@ -18,7 +18,7 @@
 <div id="graphic_container">
 
   <div id="selection_area" class="form-group">
-    <label class="control-label col-sm-2">Change year:</label>
+    <label class="control-label col-sm-2">{{isEng() ? 'Change year':'Schimba anul'}}:</label>
     <div class="col-sm-3">
       <select type="date" class="form-control" id="year_select" placeholder="year" ng-model="selected_year"
               ng-change="onDateSelect(true)">
@@ -34,7 +34,7 @@
     </div>
   </div>
   <div ng-show="graphic_type == 'PIE' || graphic_type == 'DYNAMIC'" id="selection_area2" class="form-group">
-    <label class="control-label col-sm-2">Change month:</label>
+    <label class="control-label col-sm-2">{{isEng() ? 'Change month':'Schimba luna'}}:</label>
     <div class="col-sm-3">
       <select type="date" class="form-control" id="month_select" placeholder="month" ng-model="selected_month"
               ng-change="onDateSelect(false)">
@@ -77,8 +77,11 @@
     <br>
     <br>
     <div class="form-group">
-      <label class="control-label col-sm-11" style="width:100%;text-align:center;">DOUGHNUT graphic chart displays YEARLY calculation
+      <label ng-if="isEng()" class="control-label col-sm-11" style="width:100%;text-align:center;">DOUGHNUT graphic chart displays YEARLY calculation
         for categories. For MONTHLY calculation please change to PIE or DYNAMIC graphic.
+      </label>
+      <label ng-if="!isEng()" class="control-label col-sm-11" style="width:100%;text-align:center;">Graficul de tip DOUGHNUT arata calcule ANUALE
+        pentru categorii. Pentru calcule LUNARE te rugam foloseste graficele de tip PIE sau DYNAMIC.
       </label>
     </div>
   </div>
@@ -93,8 +96,11 @@
     <br>
     <br>
     <div class="form-group">
-      <label class="control-label col-sm-11" style="width:100%;text-align:center;">PIE graphic chart displays MONTHLY calculation
+      <label ng-if="isEng()" class="control-label col-sm-11" style="width:100%;text-align:center;">PIE graphic chart displays MONTHLY calculation
         for categories. For YEARLY calculation please change to DOUGHNUT graphic.
+      </label>
+      <label ng-if="!isEng()" class="control-label col-sm-11" style="width:100%;text-align:center;">Graficul de tip PIE arata calcule LUNARE
+        pentru categorii. Pentru calcule ANUALE te rugam foloseste graficul DOUGHNUT.
       </label>
     </div>
   </div>
@@ -109,8 +115,11 @@
     <br>
     <br>
     <div class="form-group">
-      <label class="control-label col-sm-11" style="width:100%;text-align:center;">POLAR graphic chart displays YEARLY calculation
+      <label ng-if="isEng()" class="control-label col-sm-11" style="width:100%;text-align:center;">POLAR graphic chart displays YEARLY calculation
         for categories. For MONTHLY calculation please change to PIE or DYNAMIC graphic.
+      </label>
+      <label ng-if="!isEng()" class="control-label col-sm-11" style="width:100%;text-align:center;">Graficul de tip POLAR arata calcule ANUALE
+        pentru categorii. Pentru grafice lunare te rugam selecteaza graficele de tip PIE sau DYNAMIC.
       </label>
     </div>
   </div>
