--- a/app/views/income/add_income.html
+++ b/app/views/income/add_income.html
@@ -1,34 +1,34 @@
 <div class="container sign-up-container">
-  <h2 style="text-align:center;"><img src="images/add_income.png"> ADD INCOME</h2>
+  <h2 style="text-align:center;"><img src="images/add_income.png"> {{isEng() ? 'ADD INCOME':'ADAUGA INCASARE'}}</h2>
   <form class="form-horizontal" role="form" ng-submit="submit()">
     <div class="form-group">
-      <label class="control-label col-sm-2" for="name">Name:</label>
+      <label class="control-label col-sm-2" for="name">{{isEng() ? 'Name':'Nume'}}:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="name" placeholder="Income name" ng-model="income.name" required >
+        <input type="text" class="form-control" id="name" placeholder="{{isEng() ? 'Income name':'Numele incasarii'}}" ng-model="income.name" required >
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="description">Description:</label>
+      <label class="control-label col-sm-2" for="description">{{isEng() ? 'Description':'Descriere'}}:</label>
       <div class="col-sm-10">
-        <textarea type="text" rows="5"  class="form-control" id="description" placeholder="Description ..." ng-model="income.description"/>
+        <textarea type="text" rows="5"  class="form-control" id="description" placeholder="{{isEng() ? 'Description ...':'Descriere ...'}}" ng-model="income.description"/>
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="amount">Amount:</label>
+      <label class="control-label col-sm-2" for="amount">{{isEng() ? 'Amount':'Suma'}}:</label>
       <div class="col-sm-10">
-        <input type="number" step="any" class="form-control" id="amount" placeholder="Income amount" ng-model="income.amount" required >
+        <input type="number" step="any" class="form-control" id="amount" placeholder="{{isEng() ? 'Income amount':'Suma incasarii'}}" ng-model="income.amount" required >
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="date">Creation date:</label>
+      <label class="control-label col-sm-2" for="date">{{isEng() ? 'Creation date':'Data crearii'}}:</label>
       <div class="col-sm-10">
-        <input type="datetime-local" value="{{current_date_value}}" class="form-control" id="date" placeholder="date"
+        <input type="datetime-local" value="{{current_date_value}}" class="form-control" id="date" placeholder="'date"
                ng-model="income.creationDate" required >
       </div>
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default submit-btn">Add income</button>
+        <button type="submit" class="btn btn-default submit-btn">{{isEng() ? 'Add income':'Adauga incasarea'}}</button>
       </div>
     </div>
   </form>
