--- a/app/views/income/incomes_chart.html
+++ b/app/views/income/incomes_chart.html
@@ -1,8 +1,8 @@
 <div class="container sign-up-container">
-  <h2 style="text-align:center;"><img src="images/incomes_chart.svg"> INCOMES CHART</h2>
+  <h2 style="text-align:center;"><img src="images/incomes_chart.svg"> {{isEng() ? 'INCOMES CHART':'GRAFIC INCASARI'}}</h2>
   <br>
   <div class="form-group">
-    <label class="control-label col-sm-3">Graphic type:</label>
+    <label class="control-label col-sm-3">{{isEng() ? 'Graphic type':'Tipul graficului'}}:</label>
     <div class="col-sm-8">
       <select type="date" class="form-control" id="graphic" placeholder="Category" ng-model="graphic_type" required>
         <option ng-repeat="graphic in graphics" value="{{graphic}}" required>{{graphic}}</option>
@@ -18,7 +18,7 @@
 <div id="graphic_container">
 
   <div id="selection_area" class="form-group">
-    <label class="control-label col-sm-2">Change year:</label>
+    <label class="control-label col-sm-2">{{isEng() ? 'Change year':'Schimba anul'}}:</label>
     <div class="col-sm-3">
       <select type="date" class="form-control" id="year_select" placeholder="year" ng-model="selected_year"
               ng-change="onDateSelect(true)">
