--- a/app/views/income/incomes_history.html
+++ b/app/views/income/incomes_history.html
@@ -1,22 +1,22 @@
 <div class="container sign-up-container">
-  <h2 style="text-align:center;"><img src="images/incomes_history.svg"> INCOMES HISTORY</h2>
+  <h2 style="text-align:center;"><img src="images/incomes_history.svg"> {{isEng() ? 'INCOMES HISTORY':'ISTORIC INCASARI'}}</h2>
   <br>
 </div>
 <br>
-<button type="button" class="btn btn-primary btn-block" ng-click="addIncomeAttempt()">Add new income</button>
+<button type="button" class="btn btn-primary btn-block" ng-click="addIncomeAttempt()">{{isEng() ? 'Add new income':'Adauga incasare noua'}}</button>
 <br>
 <div>
   <table class="table table-bordered table-hover">
     <thead>
     <tr>
-      <th>Name
-        <span class="glyphicon glyphicon-sort" bs-tooltip title="Sort by name" ng-click="changeSortingCriteria('name')"></span>
+      <th>{{isEng() ? 'Name':'Nume'}}
+        <span class="glyphicon glyphicon-sort" bs-tooltip title="{{isEng() ? 'Sort by name':'Sorteaza dupa nume'}}" ng-click="changeSortingCriteria('name')"></span>
       </th>
-      <th>Amount
-        <span class="glyphicon glyphicon-sort" bs-tooltip title="Sort by amount" ng-click="changeSortingCriteria('amount')"></span>
+      <th>{{isEng() ? 'Amount':'Suma'}}
+        <span class="glyphicon glyphicon-sort" bs-tooltip title="{{isEng() ? 'Sort by amount':'Sorteaza dupa suma'}}" ng-click="changeSortingCriteria('amount')"></span>
       </th>
-      <th>Date
-        <span class="glyphicon glyphicon-sort" bs-tooltip title="Sort by date" ng-click="changeSortingCriteria('creationDate')"></span>
+      <th>{{isEng() ? 'Date':'Data'}}
+        <span class="glyphicon glyphicon-sort" bs-tooltip title="{{isEng() ? 'Sort by date':'Sorteaza dupa data'}}" ng-click="changeSortingCriteria('creationDate')"></span>
       </th>
       <th></th>
     </tr>
@@ -27,12 +27,12 @@
       <td>{{ income.amount }}</td>
       <td>{{ income.creationDate | date:'medium' }}</td>
       <td>
-        <span class="glyphicon glyphicon-pencil" bs-tooltip title="Edit income!" ng-click="editIncome(income)"></span>
-        <span class="glyphicon glyphicon-trash" style="float:right;" bs-tooltip title="Delete income!"
+        <span class="glyphicon glyphicon-pencil" bs-tooltip title="{{isEng() ? 'Edit income':'Editeaza incasarea'}}!" ng-click="editIncome(income)"></span>
+        <span class="glyphicon glyphicon-trash" style="float:right;" bs-tooltip title="{{isEng() ? 'Delete income':'Sterge incasarea'}}!"
               ng-click="deleteIncome(income)"></span></td>
     </tr>
     <tr ng-show="incomes.length == 0">
-      <td style="font-style:italic;" colspan="5">No income have been found!</td>
+      <td style="font-style:italic;" colspan="5">{{isEng() ? 'No income have been found':'Nici o incasare nu a fost gasita'}}!</td>
     </tr>
     </tbody>
   </table>
