--- a/app/views/user/login.html
+++ b/app/views/user/login.html
@@ -1,24 +1,24 @@
 <div class="alert alert-danger" ng-show="error">
-  There was a problem logging in. Please try again.
+  {{isEng() ? 'There was a problem logging in. Please try again.':'Probleme la logarea in aplicatie!'}}
 </div>
 <div class="container sign-up-container">
-  <h2 style="text-align:center;"><img src="images/login.png"> LOGIN FORM</h2>
+  <h2 style="text-align:center;"><img src="images/login.png"> {{isEng() ? 'LOGIN FORM':'FORMULAR DE LOGARE'}}</h2>
   <form class="form-horizontal" role="form" ng-submit="controller.login()">
     <div class="form-group">
-      <label class="control-label col-sm-2" for="login_username">Username:</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="login_username" placeholder="Enter username or email" ng-model="controller.credentials.username" required >
+      <label class="control-label col-sm-3" for="login_username">{{isEng() ? 'Username or Email:':'Utilizator sau E-mail:'}}</label>
+      <div class="col-sm-9">
+        <input type="text" class="form-control" id="login_username" placeholder="{{isEng() ? 'Enter username or email':'Introdu numele de utilizator sau email-ul'}}" ng-model="controller.credentials.username" required >
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="_login_pwd">Password:</label>
-      <div class="col-sm-10">
-        <input type="password" class="form-control" id="_login_pwd" placeholder="Enter password" ng-model="controller.credentials.password" required >
+      <label class="control-label col-sm-3" for="_login_pwd">{{isEng() ? 'Password:':'Parola:'}}</label>
+      <div class="col-sm-9">
+        <input type="password" class="form-control" id="_login_pwd" placeholder="{{isEng() ? 'Enter password':'Introdu parola'}}" ng-model="controller.credentials.password" required >
       </div>
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default submit-btn">Login</button>
+        <button type="submit" class="btn btn-default submit-btn">{{isEng() ? 'Login':'Logare'}}</button>
       </div>
     </div>
   </form>
