--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,6 +8,8 @@
     <p ng-if="!isEng()">Mereu o placere in oferirea celei mai placute si usor de folosit aplicatii de management financiar.</p>
   </p>
   <p><a class="btn btn-lg btn-success" ng-href="#/">Control expenses!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <br>
+  <img src="images/graphic_preview.PNG" style="width:100%" alt="I'm Yeoman"><br>
   <br><br>
   <h3 style="font-weight: bold;">{{isEng() ? 'What':'Ce face aplicatia'}} <span style="font-style: italic;">MyMoneyTracker</span> {{isEng() ? 'does':''}} ?</h3>
   <div>
