--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,12 +1,19 @@
 <div class="jumbotron">
-  <h2>Welcome to <span style="font-style: italic;">My Money Tracker</span>
+  <h2>{{isEng() ? 'Welcome to':'Bine ai venit in aplicatia'}} <span style="font-style: italic;">My Money Tracker</span>
     <span ng-show="username">, <span style="color:#ff3333;">{{username}}</span></span>!</h2>
   <p class="lead">
     <img src="images/logo.svg" alt="I'm Yeoman"><br>
     <br>
-    Always a pleasure offering you the best and easy to use expense manager.
+    <p ng-if="isEng()">Always a pleasure offering you the best and easy to use expense manager.</p>
+    <p ng-if="!isEng()">Mereu o placere in oferirea celei mai placute si usor de folosit aplicatii de management financiar.</p>
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Control expenses!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <p><a class="btn btn-lg btn-success" ng-init="shouldShowGraphicPreview = true"
+        ng-click="shouldShowGraphicPreview = !shouldShowGraphicPreview">Control expenses!<span class="glyphicon glyphicon-ok"></span></a>
+  </p>
+  <br>
+  <img ng-if="shouldShowGraphicPreview" src="images/preview_graphics.PNG" style="width:100%" alt="I'm Yeoman">
+  <img ng-if="!shouldShowGraphicPreview" src="images/preview_statistics.PNG" style="width:100%" alt="I'm Yeoman">
+  <br>
   <br><br>
   <h3 style="font-weight: bold;">What <span style="font-style: italic;">MyMoneyTracker</span> does ?</h3>
   <div>
@@ -14,7 +21,7 @@
         <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> helps you to keep your budget under control.</li>
         <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> can calculate how much you've spent monthly,
           grouping your expenses by categories or by date.</li>
-        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> helps you establish monthly tresholds for expenses
+        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> helps you establish monthly thresholds for expenses
           grouped by different categories.</li>
         <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> is free and easy to use.</li>
         <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> offers the possibility to manage your expenses by
@@ -23,6 +30,21 @@
         <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> offers a secure connection based on HTTPS protocol.</li>
         <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> encrypts any information for a user, and only the
             user that have created the information has acces to it.</li>
+      </ul>
+
+      <ul ng-if="!isEng()" style="text-align:left;font-size:18px;">
+        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> te ajuta sa tii bugetul personal sub control.</li>
+        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> poate calcula cat ai cheltuit lunar,
+          grupand cheltuielile in functie de categorie sau de data.</li>
+        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> te poate ajuta sa iti stabilesti limite lunare pentru
+          cheltuielile grupate pe categorii diferite.</li>
+        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> este gratuit si usor de folosit.</li>
+        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> ofera posibilitatea managementului chaltuielilor
+          prin crearea unui cont care poate fi folosit pentru logarea in aplicatie de oriunde ,
+          fara necesitatea instalarii unei alte aplicatii.</li>
+        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> ofera o conexiune sigura prin intermediul protocolului HTTPS.</li>
+        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> cripteaza toate informatiile introduse de utlizator, si doar
+          utilizatorul care a introdus informatia va avea acces.</li>
       </ul>
     </div>
   </div>
