Forgot password function.

--- a/app/views/user/login.html
+++ b/app/views/user/login.html
@@ -17,9 +17,10 @@
       </div>
     </div>
     <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
+      <div class="col-sm-offset-2 col-sm-7">
         <button type="submit" class="btn btn-default submit-btn">Login</button>
       </div>
+      <label class="control-label col-sm-3" id="forgot_password" style="cursor:pointer;cursor:hand;"><a ng-click="controller.forgotPassword()">Forgot your password?</a></label>
     </div>
   </form>
 </div>
