--- a/app/views/income/incomes_history.html
+++ b/app/views/income/incomes_history.html
@@ -6,7 +6,7 @@
 <button type="button" class="btn btn-primary btn-block" ng-click="addIncomeAttempt()">Add new income</button>
 <br>
 <div>
-  <table class="table table-bordered table-hover">
+  <table class="table table-bordered table-hover" ng-show="loading == false">
     <thead>
     <tr>
       <th>Name
@@ -40,4 +40,6 @@
     </tr>
     </tbody>
   </table>
+
+  <loading-page width="150px" message="Processing ..." ng-show="loading == true"></loading-page>
 </div>
