--- a/app/views/user/login.html
+++ b/app/views/user/login.html
@@ -3,7 +3,7 @@
 </div>
 <div class="container sign-up-container">
   <h2 style="text-align:center;"><img src="images/login.png"> LOGIN FORM</h2>
-  <form class="form-horizontal" role="form" ng-submit="controller.login()">
+  <form class="form-horizontal" role="form" ng-submit="controller.login()" ng-show="controller.loading == false">
     <div class="form-group">
       <label class="control-label col-sm-2" for="login_username">Username:</label>
       <div class="col-sm-10">
@@ -23,4 +23,5 @@
       <label class="control-label col-sm-3" id="forgot_password" style="cursor:pointer;cursor:hand;"><a ng-click="controller.forgotPassword()">Forgot your password?</a></label>
     </div>
   </form>
+  <loading-page width="150px" message="Processing ..." ng-show="controller.loading == true"></loading-page>
 </div>
