--- a/app/views/user/profile.html
+++ b/app/views/user/profile.html
@@ -2,45 +2,48 @@
   <h2 style="text-align:center;"><img src="images/user_profile.svg"> USER PROFILE</h2>
   <br>
   <hr style="border-top: 1px solid #ccc;">
-  <div class="form-group">
-    <label class="control-label col-sm-2">Default currency:</label>
-    <div class="col-sm-5">
-      <select type="date" class="form-control" id="currency" placeholder="Category" ng-model="default_currency"
-              ng-change="onCurrencyChange(default_currency)" required>
-        <option ng-repeat="currency in availableCurrencies" value="{{currency}}" required>{{currency}}</option>
-      </select>
+  <div ng-show="loading == 0">
+    <div class="form-group">
+      <label class="control-label col-sm-2">Default currency:</label>
+      <div class="col-sm-5">
+        <select type="date" class="form-control" id="currency" placeholder="Category" ng-model="default_currency"
+                ng-change="onCurrencyChange(default_currency)" required>
+          <option ng-repeat="currency in availableCurrencies" value="{{currency}}" required>{{currency}}</option>
+        </select>
+      </div>
+      <div class="col-sm-offset-2 col-sm-3">
+        <button class="btn btn-default submit-btn" ng-click="changePassword()" style="float:right;">Change password</button>
+      </div>
     </div>
-    <div class="col-sm-offset-2 col-sm-3">
-      <button class="btn btn-default submit-btn" ng-click="changePassword()" style="float:right;">Change password</button>
+    <br>
+    <br>
+    <br>
+    <hr style="border-top: 1px solid #ccc;">
+    <div style="width:100%;text-align:center;">
+      <p><span style="font-weight: bold;">MONTHLY EXPENSES</span>: {{username}}, you've spent <span style="font-weight: bold;">'{{sumOfExpensesThisMonth}} {{default_currency}}'</span> THIS MONTH</p>
+      <p><span style="font-weight: bold;">MONTHLY INCOMES</span>: {{username}}, you've received <span style="font-weight: bold;">'{{sumOfIncomesThisMonth}} {{default_currency}}'</span> THIS MONTH</p>
     </div>
-  </div>
-  <br>
-  <br>
-  <br>
-  <hr style="border-top: 1px solid #ccc;">
-  <div style="width:100%;text-align:center;">
-    <p><span style="font-weight: bold;">MONTHLY EXPENSES</span>: {{username}}, you've spent <span style="font-weight: bold;">'{{sumOfExpensesThisMonth}} {{default_currency}}'</span> THIS MONTH</p>
-    <p><span style="font-weight: bold;">MONTHLY INCOMES</span>: {{username}}, you've received <span style="font-weight: bold;">'{{sumOfIncomesThisMonth}} {{default_currency}}'</span> THIS MONTH</p>
-  </div>
-  <pre><span style="font-size:17px;"> <span class="glyphicon glyphicon-usd"></span> Your <span style="font-weight: bold;color:BlueViolet;">MONTHLY BUDGET</span> is <span style="font-weight: bold;color:
-  {{(sumOfIncomesThisMonth-sumOfExpensesThisMonth) === 0 ? 'blue' : ((sumOfIncomesThisMonth-sumOfExpensesThisMonth) < 0 ? 'red' : 'green')}};"> '{{ (sumOfIncomesThisMonth - sumOfExpensesThisMonth).toFixed(2)}} {{default_currency}}'</span></span></pre>
-  <br>
-  <hr style="border-top: 1px solid #ccc;">
-  <div style="width:100%;text-align:center;">
-    <p><span style="font-weight: bold;">YEARLY EXPENSES</span>: {{username}}, you've spent <span style="font-weight: bold;">'{{sumOfExpensesThisYear}} {{default_currency}}'</span> THIS YEAR</p>
-    <p><span style="font-weight: bold;">YEARLY INCOMES</span>: {{username}}, you've received <span style="font-weight: bold;">'{{sumOfIncomesThisYear}} {{default_currency}}'</span> THIS YEAR</p>
-  </div>
-  <pre><span style="font-size:17px;"> <span class="glyphicon glyphicon-usd"></span> Your <span style="font-weight: bold;color:Gold;">YEARLY BUDGET</span> is <span style="font-weight: bold;color:
-  {{(sumOfIncomesThisYear-sumOfExpensesThisYear) === 0 ? 'blue' : ((sumOfIncomesThisYear-sumOfExpensesThisYear) < 0 ? 'red' : 'green')}};"> '{{ (sumOfIncomesThisYear - sumOfExpensesThisYear).toFixed(2) }} {{default_currency}}'</span></span></pre>
-  <br>
-  <hr style="border-top: 1px solid #ccc;">
-  <div style="width:100%;text-align:center;">
-    <p><span style="font-weight: bold;">OVERALL EXPENSES</span>: {{username}}, you've spent <span style="font-weight: bold;">'{{sumOfExpensesOverall}} {{default_currency}}'</span> OVERALL</p>
-    <p><span style="font-weight: bold;">OVERALL INCOMES</span>: {{username}}, you've received <span style="font-weight: bold;">'{{sumOfIncomesOverall}} {{default_currency}}'</span> OVERALL</p>
-  </div>
-  <pre><span style="font-size:17px;"> <span class="glyphicon glyphicon-usd"></span> Your <span style="font-weight: bold;color:DodgerBlue;">OVERALL BUDGET</span> is <span style="font-weight: bold;color:
+    <pre><span style="font-size:17px;"> <span class="glyphicon glyphicon-usd"></span> Your <span style="font-weight: bold;color:BlueViolet;">MONTHLY BUDGET</span> is <span style="font-weight: bold;color:
+    {{(sumOfIncomesThisMonth-sumOfExpensesThisMonth) === 0 ? 'blue' : ((sumOfIncomesThisMonth-sumOfExpensesThisMonth) < 0 ? 'red' : 'green')}};"> '{{ (sumOfIncomesThisMonth - sumOfExpensesThisMonth).toFixed(2)}} {{default_currency}}'</span></span></pre>
+    <br>
+    <hr style="border-top: 1px solid #ccc;">
+    <div style="width:100%;text-align:center;">
+      <p><span style="font-weight: bold;">YEARLY EXPENSES</span>: {{username}}, you've spent <span style="font-weight: bold;">'{{sumOfExpensesThisYear}} {{default_currency}}'</span> THIS YEAR</p>
+      <p><span style="font-weight: bold;">YEARLY INCOMES</span>: {{username}}, you've received <span style="font-weight: bold;">'{{sumOfIncomesThisYear}} {{default_currency}}'</span> THIS YEAR</p>
+    </div>
+    <pre><span style="font-size:17px;"> <span class="glyphicon glyphicon-usd"></span> Your <span style="font-weight: bold;color:Gold;">YEARLY BUDGET</span> is <span style="font-weight: bold;color:
+    {{(sumOfIncomesThisYear-sumOfExpensesThisYear) === 0 ? 'blue' : ((sumOfIncomesThisYear-sumOfExpensesThisYear) < 0 ? 'red' : 'green')}};"> '{{ (sumOfIncomesThisYear - sumOfExpensesThisYear).toFixed(2) }} {{default_currency}}'</span></span></pre>
+    <br>
+    <hr style="border-top: 1px solid #ccc;">
+    <div style="width:100%;text-align:center;">
+      <p><span style="font-weight: bold;">OVERALL EXPENSES</span>: {{username}}, you've spent <span style="font-weight: bold;">'{{sumOfExpensesOverall}} {{default_currency}}'</span> OVERALL</p>
+      <p><span style="font-weight: bold;">OVERALL INCOMES</span>: {{username}}, you've received <span style="font-weight: bold;">'{{sumOfIncomesOverall}} {{default_currency}}'</span> OVERALL</p>
+    </div>
+    <pre><span style="font-size:17px;"> <span class="glyphicon glyphicon-usd"></span> Your <span style="font-weight: bold;color:DodgerBlue;">OVERALL BUDGET</span> is <span style="font-weight: bold;color:
   {{(sumOfIncomesOverall-sumOfExpensesOverall) === 0 ? 'blue' : ((sumOfIncomesOverall-sumOfExpensesOverall) < 0 ? 'red' : 'green')}};"> '{{ (sumOfIncomesOverall - sumOfExpensesOverall).toFixed(2) }} {{default_currency}}'</span></span></pre>
+  </div>
 
+  <loading-page width="150px" message="Processing ..." ng-show="loading != 0"></loading-page>
 </div>
 
 
