--- a/app/views/user/renew_forgot_password.html
+++ b/app/views/user/renew_forgot_password.html
@@ -25,4 +25,6 @@
       </div>
     </div>
   </form>
+
+  <loading-page width="150px" message="Processing ..." ng-show="loading == true"></loading-page>
 </div>
