--- a/app/views/expense/expense_categories.html
+++ b/app/views/expense/expense_categories.html
@@ -33,7 +33,7 @@
 
 <br>
 <div>
-  <table class="table table-bordered table-hover">
+  <table class="table table-bordered table-hover" ng-show="loading == false">
     <thead>
     <tr>
       <th>Category Name</th>
@@ -57,4 +57,6 @@
     </tr>
     </tbody>
   </table>
+
+  <loading-page width="150px" message="Processing ..." ng-show="loading == true"></loading-page>
 </div>
