--- a/app/views/income/add_income.html
+++ b/app/views/income/add_income.html
@@ -1,6 +1,7 @@
 <div class="container sign-up-container">
   <h2 style="text-align:center;"><img src="images/add_income.png"> ADD INCOME</h2>
-  <form class="form-horizontal" role="form" ng-submit="submit()">
+
+  <form class="form-horizontal" role="form" ng-submit="submit()" ng-show="loading == false">
     <div class="form-group">
       <label class="control-label col-sm-2" for="name">Name:</label>
       <div class="col-sm-10">
@@ -38,4 +39,6 @@
       </div>
     </div>
   </form>
+
+  <loading-page width="150px" message="Processing ..." ng-show="loading == true"></loading-page>
 </div>
