--- a/app/views/income/incomes_chart.html
+++ b/app/views/income/incomes_chart.html
@@ -17,40 +17,46 @@
 
 <div id="graphic_container">
 
-  <div id="selection_area" class="form-group">
-    <label class="control-label col-sm-2">Change year:</label>
-    <div class="col-sm-3">
-      <select type="date" class="form-control" id="year_select" placeholder="year" ng-model="selected_year"
-              ng-change="onDateSelect(true)">
-        <option ng-repeat="year in yearsArray" value="{{year}}" required>{{year}}</option>
-      </select>
+  <div ng-show="loading == false">
+    <div id="selection_area" class="form-group">
+      <label class="control-label col-sm-2">Change year:</label>
+      <div class="col-sm-3">
+        <select type="date" class="form-control" id="year_select" placeholder="year" ng-model="selected_year"
+                ng-change="onDateSelect(true)">
+          <option ng-repeat="year in yearsArray" value="{{year}}" required>{{year}}</option>
+        </select>
+      </div>
+      <div class="col-sm-4"></div>
+      <div class="col-sm-3">
+        <input  ng-show="graphic_type == 'DYNAMIC'" type="button" class="form-control" value="Toggle graphic type"
+                ng-click="toggleDynamicGraphic()">
+      </div>
     </div>
-    <div class="col-sm-4"></div>
-    <div class="col-sm-3">
-      <input  ng-show="graphic_type == 'DYNAMIC'" type="button" class="form-control" value="Toggle graphic type"
-              ng-click="toggleDynamicGraphic()">
+
+    <div id="linear_chart" ng-if="graphic_type == 'LINEAR'" >
+      <canvas class="chart chart-line" chart-data="dataLinear" chart-legend="true"
+              chart-labels="labelsLinear" chart-series="seriesLinear"
+              chart-click="onClick" >
+      </canvas>
     </div>
+
+    <div id="bar_chart" ng-if="graphic_type == 'BAR'" >
+      <canvas class="chart chart-bar"
+              chart-data="dataBar" chart-labels="labelsBar" chart-series="seriesBar" chart-legend="true">
+      </canvas>
+    </div>
+
+    <div id="dynamic_chart" ng-if="graphic_type == 'DYNAMIC'">
+      <canvas class="chart-base" chart-type="typeDynamic"
+              chart-data="dataDynamic" chart-labels="labelsDynamic" chart-legend="true">
+      </canvas>
+    </div>
+
+    <br>
   </div>
 
-  <div id="linear_chart" ng-if="graphic_type == 'LINEAR'" >
-    <canvas class="chart chart-line" chart-data="dataLinear" chart-legend="true"
-            chart-labels="labelsLinear" chart-series="seriesLinear"
-            chart-click="onClick" >
-    </canvas>
-  </div>
-
-  <div id="bar_chart" ng-if="graphic_type == 'BAR'" >
-    <canvas class="chart chart-bar"
-            chart-data="dataBar" chart-labels="labelsBar" chart-series="seriesBar" chart-legend="true">
-    </canvas>
-  </div>
-
-  <div id="dynamic_chart" ng-if="graphic_type == 'DYNAMIC'">
-    <canvas class="chart-base" chart-type="typeDynamic"
-            chart-data="dataDynamic" chart-labels="labelsDynamic" chart-legend="true">
-    </canvas>
-  </div>
-
-  <br>
+  <loading-page width="150px" message="Processing ..." ng-show="loading == true"></loading-page>
 </div>
+
+
 
