--- a/app/views/user/logout.html
+++ b/app/views/user/logout.html
@@ -1,3 +1,3 @@
 <div class="container sign-up-container">
-  <h1>LOGGING OUT THE USER ......</h1>
+  <loading-page width="150px" message="LOGGING OUT THE USER ......"></loading-page>
 </div>
