--- a/app/views/user/sign_up.html
+++ b/app/views/user/sign_up.html
@@ -1,6 +1,6 @@
 <div class="container sign-up-container">
   <h2 style="text-align:center;"><img src="images/sign-up.png"> SIGN UP FORM</h2>
-  <form class="form-horizontal" role="form" ng-submit="submit()">
+  <form class="form-horizontal" role="form" ng-submit="submit()" ng-show="loading == false">
     <div class="form-group">
       <label class="control-label col-sm-2" for="email">Email<span style="color:#ff3333;">*</span> :</label>
       <div class="col-sm-10">
@@ -55,4 +55,6 @@
       </div>
     </div>
   </form>
+
+  <loading-page width="150px" message="Processing ..." ng-show="loading == true"></loading-page>
 </div>
