--- a/app/views/user/renew_forgot_password.html
+++ b/app/views/user/renew_forgot_password.html
@@ -1,6 +1,6 @@
 <div class="container sign-up-container">
   <h2 style="text-align:center;"><img src="images/renew_form.svg"> FORGOT PASSWORD - RENEW</h2>
-  <form class="form-horizontal" role="form" ng-submit="submit()">
+  <form class="form-horizontal" role="form" ng-submit="submit()" ng-show="loading == false">
     <div class="form-group">
       <label class="control-label col-sm-2" for="pwd">New password<span style="color:#ff3333;">*</span> :</label>
       <div class="col-sm-10">
