--- a/app/views/income/incomes_history.html
+++ b/app/views/income/incomes_history.html
@@ -10,16 +10,16 @@
     <thead>
     <tr>
       <th>Name
-        <span class="glyphicon glyphicon-sort" bs-tooltip title="Sort by name" ng-click="changeSortingCriteria('name')"></span>
+        <span class="glyphicon glyphicon-sort control-icon-blue" bs-tooltip title="Sort by name" ng-click="changeSortingCriteria('name')"></span>
       </th>
       <th>Amount
-        <span class="glyphicon glyphicon-sort" bs-tooltip title="Sort by amount" ng-click="changeSortingCriteria('amount')"></span>
+        <span class="glyphicon glyphicon-sort control-icon-blue" bs-tooltip title="Sort by amount" ng-click="changeSortingCriteria('amount')"></span>
       </th>
       <th>Currency
-        <span class="glyphicon glyphicon-sort" bs-tooltip title="Sort by currency" ng-click="changeSortingCriteria('currency')"></span>
+        <span class="glyphicon glyphicon-sort control-icon-blue" bs-tooltip title="Sort by currency" ng-click="changeSortingCriteria('currency')"></span>
       </th>
       <th>Date
-        <span class="glyphicon glyphicon-sort" bs-tooltip title="Sort by date" ng-click="changeSortingCriteria('creationDate')"></span>
+        <span class="glyphicon glyphicon-sort control-icon-blue" bs-tooltip title="Sort by date" ng-click="changeSortingCriteria('creationDate')"></span>
       </th>
       <th></th>
     </tr>
@@ -31,8 +31,8 @@
       <td>{{ income.currency }}</td>
       <td>{{ income.creationDate | date:'medium' }}</td>
       <td>
-        <span class="glyphicon glyphicon-pencil" bs-tooltip title="Edit income!" ng-click="editIncome(income)"></span>
-        <span class="glyphicon glyphicon-trash" style="float:right;" bs-tooltip title="Delete income!"
+        <span class="glyphicon glyphicon-pencil control-icon-green" bs-tooltip title="Edit income!" ng-click="editIncome(income)"></span>
+        <span class="glyphicon glyphicon-trash control-icon-red" style="float:right;" bs-tooltip title="Delete income!"
               ng-click="deleteIncome(income)"></span></td>
     </tr>
     <tr ng-show="incomes.length == 0">
